# ReazonSpeech

./: .gitignore  LICENSE  README.rst  __init__.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml
colab/: ReazonSpeech_v2_0.ipynb  ReazonSpeech_v2_0_en.ipynb
pkg/_v1/src/: __init__.py  caption.py  cli.py  transcribe.py
pkg/avsr/: README.rst  pyproject.toml
pkg/avsr/src/: __init__.py
pkg/avsr/src/avhubert/: __init__.py  configuration_avhubert.py  configuration_resnet.py  decoder.py  feature_extraction_avhubert.py  modeling_avhubert.py
pkg/avsr/src/reazonspeech/avsr/avhubert/: feature_extraction_avhubert.py  modeling_resnet.py  processing_avhubert.py
pkg/espnet-asr/: README.rst  pyproject.toml
pkg/espnet-asr/src/: audio.py  cli.py  ctc.py  interface.py  transcribe.py
pkg/espnet-asr/src/reazonspeech/espnet/asr/: __init__.py  cli.py  ctc.py  transcribe.py
pkg/espnet-oneseg/: README.rst  pyproject.toml
pkg/espnet-oneseg/src/: __init__.py  interface.py  text.py
pkg/espnet-oneseg/src/reazonspeech/espnet/oneseg/: align.py  utils.py
pkg/evaluation/: README.rst  pyproject.toml
pkg/evaluation/examples/rs-espnet/: eval.py  requirements.txt
pkg/evaluation/examples/rs-k2/: eval.py  requirements.txt
pkg/evaluation/examples/rs-nemo/: eval.py  requirements.txt
pkg/evaluation/examples/whisper/: eval.py  requirements.txt
pkg/evaluation/src/: base.py  utils.py
pkg/evaluation/src/reazonspeech/evaluation/: __init__.py  base.py
pkg/k2-asr/: README.rst  pyproject.toml  test_model.py
pkg/k2-asr/src/: __init__.py  audio.py  cli.py  huggingface.py  interface.py  transcribe.py  writer.py
pkg/k2-asr/src/reazonspeech/k2/asr/: __init__.py  huggingface.py  transcribe.py
pkg/k2-asr/test_wavs/: transcripts.txt
pkg/nemo-asr/: README.rst  pyproject.toml
pkg/nemo-asr/src/: cli.py  decode.py  fs.py  interface.py  transcribe.py
pkg/nemo-asr/src/reazonspeech/nemo/asr/: __init__.py  cli.py  decode.py  transcribe.py
pkg/shared/: README.rst  pyproject.toml
pkg/shared/src/reazonspeech/shared/: audio.py  fs.py  interface.py  writer.py
reazonspeech/: __init__.py  align.py  caption.py  cli.py  encoding.py  interface.py  sentence.py  text.py  transcribe.py  utils.py
src/: alignment.py  base.py  cer.py  immutable.py  type.py  utils.py  vad.py
