[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech"
version = "3.0.0"
description = "ReazonSpeech is a toolkit for speech recognition and related tasks."
readme = "README.rst"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
shared = ["reazonspeech-shared>=3.0.0"]
avsr = ["reazonspeech-avsr>=3.0.0"]
evaluation = [
    "reazonspeech-evaluation>=3.0.0",
    "reazonspeech-shared>=3.0.0",
]
k2-asr = [
    "reazonspeech-shared>=3.0.0",
    "reazonspeech-k2-asr>=3.0.0",
]
nemo-asr = [
    "reazonspeech-shared>=3.0.0",
    "reazonspeech-nemo-asr>=3.0.0",
]
espnet-asr = [
    "reazonspeech-shared>=3.0.0",
    "reazonspeech-espnet-asr>=3.0.0",
]
espnet-oneseg = [
    "reazonspeech-shared>=3.0.0",
    "reazonspeech-espnet-oneseg>=3.0.0",
]

[dependency-groups]
shared = ["reazonspeech-shared"]
asr = [
    "reazonspeech-k2-asr",
    "reazonspeech-nemo-asr",
    "reazonspeech-espnet-asr",
]
avsr = ["reazonspeech-avsr"]
evaluation = [
    "reazonspeech-evaluation",
    "reazonspeech-shared",
]
k2-asr = [
    "reazonspeech-shared",
    "reazonspeech-k2-asr",
]
nemo-asr = [
    "reazonspeech-shared",
    "reazonspeech-nemo-asr",
]
espnet-asr = [
    "reazonspeech-shared",
    "reazonspeech-espnet-asr",
]
espnet-oneseg = [
    "reazonspeech-shared",
    "reazonspeech-espnet-oneseg",
]

[tool.setuptools]
packages = []

[tool.uv.sources]
"reazonspeech-shared" = { path = "pkg/shared" }
"reazonspeech-avsr" = { path = "pkg/avsr" }
"reazonspeech-evaluation" = { path = "pkg/evaluation" }
"reazonspeech-espnet-asr" = { path = "pkg/espnet-asr" }
"reazonspeech-espnet-oneseg" = { path = "pkg/espnet-oneseg" }
"reazonspeech-k2-asr" = { path = "pkg/k2-asr" }
"reazonspeech-nemo-asr" = { path = "pkg/nemo-asr" }
