[metadata]
name = reazonspeech
version = 1.0.0

[options]
packages = find:
install_requires =
    ginza
    ja_ginza
    soundfile
    ffmpeg-python

    # The following is the minimum set of modules
    # required to use ESPnet.
    six
    typeguard == 2.13.3
    numpy == 1.21.1
    torch == 1.12.1
    torchaudio == 0.12.1
    espnet == 202209
    espnet_model_zoo @ git+https://github.com/espnet/espnet_model_zoo

[options.package_data]
reazonspeech.data =
    *.txt

[options.entry_points]
console_scripts =
    reazonspeech = reazonspeech.cli:main
