[metadata]
name = reazonspeech
version = 1.1.1

[options]
packages = find:
install_requires =
    ginza
    ja_ginza
    soundfile
    ffmpeg-python

    # The following is the minimum set of modules
    # required to use ESPnet.
    six
    typeguard == 2.*  # ESPnet is incompatible with typeguard >= 3.0.
    numpy < 1.24      # Numba fails with numpy 1.24 on Ubuntu 20.04
    torch
    torchaudio
    espnet
    espnet_model_zoo @ git+https://github.com/espnet/espnet_model_zoo

[options.package_data]
reazonspeech.data =
    *.txt

[options.entry_points]
console_scripts =
    reazonspeech = reazonspeech.cli:main
