[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-espnet-asr"
version = "3.0.0"
dependencies = [
    "reazonspeech-shared>=3.0.0",
    "torch",
    "ctc-segmentation",
    "espnet",
    "espnet_model_zoo @ git+https://github.com/espnet/espnet_model_zoo",
]

[project.scripts]
reazonspeech-espnet-asr = "reazonspeech.espnet.asr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["reazonspeech.espnet.asr"]
