[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-espnet-oneseg"
version = "2.0.1"
dependencies = [
    "ginza",
    "ja_ginza",
    "soundfile",
    "ffmpeg-python",
    "espnet",
]

[tool.setuptools.package-data]
"reazonspeech.espnet.oneseg.data" = ["*.txt"]

[tool.setuptools.package-dir]
"reazonspeech.espnet.oneseg" = "src"
