[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-espnet-oneseg"
version = "3.0.0"
dependencies = [
    "ginza",
    "ja_ginza",
    "soundfile",
    "ffmpeg-python",
    "espnet",
]

[tool.setuptools.package-data]
"reazonspeech.espnet.oneseg.data" = ["*.txt"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["reazonspeech.espnet.oneseg"]
