[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-k2-asr"
version = "2.2.0"
dependencies = [
    "numpy",
    "librosa",
    "soundfile",
    "huggingface_hub",
    "sherpa-onnx",
]

[tool.setuptools.package-dir]
"reazonspeech.k2.asr" = "src"
