[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-k2-asr"
version = "3.0.0"
dependencies = [
    "reazonspeech-shared>=3.0.0",
    "huggingface_hub",
    "sherpa-onnx",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["reazonspeech.k2.asr"]
