[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-nemo-asr"
version = "2.2.0"
dependencies = [
    "numpy < 2",
    "librosa",
    "soundfile",
    "torch",
    "nemo_toolkit[asr] < 2.2",
]

[tool.setuptools.package-dir]
"reazonspeech.nemo.asr" = "src"

[project.scripts]
reazonspeech-nemo-asr = "reazonspeech.nemo.asr.cli:main"
