[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-nemo-asr"
version = "3.0.0"
dependencies = [
    "numpy",
    "librosa",
    "soundfile",
    "torch",
    "nemo_toolkit[asr] >= 2.6.1",
]

[tool.setuptools.package-dir]
"reazonspeech.nemo.asr" = "src"

[project.scripts]
reazonspeech-nemo-asr = "reazonspeech.nemo.asr.cli:main"
