[build-system]
requires = ["setuptools", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "reazonspeech-nemo-asr"
version = "3.0.0"
dependencies = [
    "reazonspeech-shared>=3.0.0",
    "numpy",
    "librosa",
    "soundfile",
    "torch",
    "nemo_toolkit[asr] >= 2.6.1",
]

[project.scripts]
reazonspeech-nemo-asr = "reazonspeech.nemo.asr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["reazonspeech.nemo.asr"]
